Ensure that bar labels are not cropped.
Reduce text size, and reduce offset to match.

Pivotal: https://www.pivotaltracker.com/story/show/71024368

Affects bar charts and journey graphs.

--- a/styles/common/graph.scss
+++ b/styles/common/graph.scss
@@ -186,7 +186,7 @@ figure.graph {
     }
 
     text {
-      @include core-19() ;
+      @include core-16() ;
       text-anchor: middle;
 
       @media (max-width: 640px) {
